--- a/ProductLandingPage/style.css
+++ b/ProductLandingPage/style.css
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+  
+body {
+  background-color: #d2ffcd !important;
+}
+    
 .navbar .dropdown-toggle, .navbar .dropdown-menu a {
     cursor: pointer;
 }
@@ -27,8 +37,121 @@
     }
 }
 
+.nav-link {
+  color: #ffb4c5 !important;
+}
+
 .container {
   position: relative;
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+#newsroom{ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 200px;
+  margin-top: 50px;
+  }
+  
+  h2 {
+    margin-bottom: 20px;
+    word-wrap: break-word;
+  }
+  
+  #submit {
+    padding: 0 20px;
+    margin: 20px;
+    height: 40px;
+    font-size: 1em;
+    font-weight: 900;
+    border: 1px black solid;
+    border-radius: 10px;
+    background: #ffb4c5;
+    cursor: pointer;
+  }
+
+input[type="email"] {
+    max-width: 275px;
+    width: 100%;
+    padding: 5px;
+  }
+
+  input[type="submit"] {
+    max-width: 150px;
+    width: 100%;
+    height: 30px;
+    margin: 15px 0;
+    border: 0;
+    background-color: #f1c40f;
+    
+    &:hover {
+      background-color: orange;
+      transition: background-color 1s;
+    }
+
+  
+  @media (max-width: 650px) {
+    margin-top: 120px;
+  }
+}
+
+
+#tutorials {
+  display: flex;
+  margin-bottom: 50px;
+}
+
+.tiles-pars {
+  width: 100%;
+  overflow: hidden;    
+}
+
+.tile-out-container {
+  margin-right: 5.72%;
+  padding-top: 30px;
+}
+
+.tile-container {
+  display: block;
+  position: relative;
+  width: 100%;
+  min-height: 216px;
+  max-width: 380px;
+  margin: 0 auto;
+  border: 1px solid #7f7f7f;
+  border-radius: 9px;
+  overflow: hidden;
+  height: 100%;
+}
+
+.icon {
+  background-color: #333;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 72px;
+}
+
+#get-started-icon {
+  background-image: url("rocket-ship.svg");
+  background-repeat: no-repeat;
+  background-size: 40px;
+  width: 40px;
+  height: 40px;
+  margin: auto;
+  position: relative;
+  top: 15px;
+  cursor: pointer;
+}
+
+.details {
+  text-align: center;
+  padding: 40px 25px;
+  overflow: hidden;
 }
 
 #photoshop {
@@ -36,6 +159,11 @@
   margin-right: 5px;
 }
 
-#get-started-icon {
-  background-image: url("rocket-ship.svg");
+li {
+  list-style: none;
+}
+
+a {
+  color: #000 !important;
+  text-decoration: none !important;
 }
